fix make hero nav section alignment more consistant

--- a/src/stylus/4.modules.hero-nav.styl
+++ b/src/stylus/4.modules.hero-nav.styl
@@ -10,6 +10,8 @@
 	background: hsla(0, 0%, 97%, 1)
 	margin-bottom: $vertical-space-iphone
 	$horizontal-divider()
+	+between(800px, 920px)
+		justify-content: space-between
 	+below(460px)
 		justify-content: space-between
 
